# Akashi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Cargo.toml  Dockerfile  LICENSE  README.md  alembic.ini  builddocs.bat  docker-compose.debug.yml  docker-compose.yml  imtest.py  pyproject.toml  requirements.txt  schema.sql  setup.py
.github/: dependabot.yml
.github/workflows/: build_docs.yml  docker-image.yml
Akashi/: main.py
Akashi/cogs/: add.py  database.py  done.py  edit.py  help.py  info.py  ipc.py  loops.py  misc.py  note.py
Akashi/model/: ReportMixin.py  __init__.py  chapter.py  monitor.py  note.py  project.py  staff.py  testdb.py  timer.py
Akashi/slash/: autocomplete.py  edit.py  helper.py  misc.py
Akashi/util/: arghelper.py  board.py  checks.py  context.py  docs.py  misc.py  search.py
alembic/versions/: 165c784b1613_add_notes_revision.py  3e3e8b56319f_create_quality_checker_column.py  59a4fd3e8013_add_track_functionality.py  7efd4129b076_add_project_mangadex_id.py  bc70c72d27a0_add_unique_restrains_on_chapter.py
commands/: allprojects.md  donepr.md  doneqcts.md  donetl.md  editchapter.md  embed.md
commands/addchapter/: massaddchapter.md
docs/: README.md  SUMMARY.md  conf.py  faq.md  index.rst  requirements.txt  your-data-and-me.md
docs/Add/: addchapter.rst  addproject.rst  addstaff.rst  index.rst  massaddchapter.rst
docs/Backup/: index.rst
docs/Database/: backup.rst  index.rst  read_only_user.rst
docs/Developers/: index.rst  restore_backup.rst  setup.rst
docs/Done/: assign.rst  done.rst  donepr.rst  doneqcts.rst  donerd.rst  donetl.rst  donets.rst  index.rst  take.rst
docs/Edit/: editchapter.rst  editproject.rst  editstaff.rst  index.rst  release.rst
docs/Info/: allprojects.rst  allstaff.rst  current.rst  index.rst  infochapter.rst  infoproject.rst  monitor.rst  mycurrent.rst
docs/Misc/: addall.rst  apply.rst  avatar.rst  cat.rst  debugboard.rst  embed.rst  hello.rst  iam.rst  iamnot.rst  index.rst  kouhai.rst  reload.rst  roles.rst  stats.rst  test.rst  toggledebug.rst  tos.rst  update.rst
docs/MyCog/: help.rst  index.rst
docs/Note/: addnote.rst  editnote.rst  index.rst  note.rst  notes.rst  purgenotes.rst  removenote.rst
docs/Stats/: get_csv.rst  index.rst  read_only_user.rst
docs/Tutorials/: DateTutorial.rst  Fields.rst  FinishChapter.rst  ParamListTut.rst  WhatsNew.rst  index.rst  whatdoesakashido.rst
docs/Types/: chapter.rst  datetime.rst  index.rst  literals.rst  none.rst  number.rst  (+3 more)
setup/: setup.yml
src/: lib.rs  main.py
(+119 files in other folders)
