[project]
name = "Akashi"
requires-python = ">= 3.11"
version = "2.0.0"
dependencies = [
  "sqlalchemy[asyncio]>=2.0.0",
  "pillow==12.1.0",
  "python-dateutil==2.9.0.post0",
  "jishaku==2.6.3",
  "discord.py==2.4.*",
  "discord-ext-menus@git+https://github.com/Rapptz/discord-ext-menus",
  "discord-ext-menus-views@git+https://github.com/oliver-ni/discord-ext-menus-views",
  "discord-ext-ipc==2.0.0",
  "asyncpg==0.31.0",
  "prettytable==3.17.0",
  "pygit2==1.19.1",
  "psutil==6.0.0",
  "boto3==1.17.102",
  "aiofiles==24.1.0",
  "docutils==0.21.2",
  "toml==0.10.2",
  "humanize==4.11.0",
  "loguru==0.7.2",
  "alembic==1.13.3",
  "hondana",
  "lark",    
  "setuptools"
]
